Wire up search form and language selection
The search form can be found in searchform.php and called with get_search_form();
Fixes question to go from chercher to Rechercher

For the language selection, css fix so that the active language is highlighted

--- a/style.css
+++ b/style.css
@@ -462,7 +462,7 @@ div#nav nav#menu a {
 div#nav nav#menu a.active {
     background-color: yellow;
 }
-div#nav nav#menu a:hover {
+div#nav nav#menu a:hover, div#nav nav#menu li.active a {
     background-color: yellow;
     color: black;
 }
