--- a/style.css
+++ b/style.css
@@ -98,8 +98,9 @@ table+h2 {
 p + p,
 h3 { margin-top: 13px; }
 
-div#prod-desc{
-    font-size: 18px;
+div.prod-desc p{
+    font-size: 16px;
+    line-height: 19px;
 }
 
 thead {
